Mon Apr 14 16:31:12 2003  Oystein Johansen  <oystein@gnubg.org>

        * export.c (CommandExportPositionJF): Based on tests by Michael
	Depreli, I now think I have done the last change to the JellyFish
	position export code. Thanks for the testing, Michael.
	
Sun Apr 13 09:51:12 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c: add and rephrase some menu entries in order to
	avoid confusion between snowie .txt and snowie standard text.

Sun Apr 13 12:41:40 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* eval.c (ScoreMoves): Restore incremental eval of NN by keeping a
	separate state for each net.

Sat Apr 12 19:17:23 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (FindnSaveBestMoves): keep track of the max ply used.
	(reported by Michael Depreli)

Sat Apr 12 14:58:54 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (SetMatchID): hprmf! CommandSetBoard resets ms.fResigned.
	(reported by Martin Janke)

Sat Apr 12 14:40:00 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (MoveListShowToggled): allow only one move to be
	selected with the Show button is active
	(suggested by Ian Shaw)

Sat Apr 12 14:21:31 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ParseMatMove): handle illegal moves in .mat files
	produced by Snowie.
	(reported by Ian Shaw)

Sat Apr 12 10:55:38 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (place_chequer_or_revert): allow pick'n'pass moves
	that end in bearoff.
	(reported by Scott Steiner)

Sat Apr 12 09:19:02 2003  Joern Thyssen  <jth@gnubg.org>

	* autogen.sh: touch sounds/Makefile.in
	(contributed by TAKAHASHI Kaoru)

Sat Apr 12 09:10:26 2003  Joern Thyssen  <jth@gnubg.org>

        * eval.c (EvaluatePositionCubeful3): fTop *must* be a part
        of EvalKey... unfortunately we're out of bits...
        This is just a quick'n'dirty fix!
        (bug reported by Achim)

Wed Apr  9 17:36:41 2003  Holger Bochnig  <hbgg@gmx.net>

	* gtkgame.c (GTKDumpStatcontext): bug fix