@@ -625,6 +625,7 @@ extern void CommandAccept( char * ),
     CommandLoadCommands( char * ),
     CommandLoadGame( char * ),
     CommandLoadMatch( char * ),
+    CommandLoadPosition( char * ),
     CommandMove( char * ),
     CommandMWC2Eq( char * ),
     CommandNewGame( char * ),
